--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "seth-frontend-challenge",
   "version": "0.1.0",
+  "homepage": "https://sethbondaroff.github.io/AgencyAnalyticsChallenge",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
@@ -20,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "concurrently --kill-others \"less-watch-compiler --config less-watcher.config.json\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
+    "gh-pages": "^4.0.0",
     "less": "^4.1.3",
     "less-watch-compiler": "^1.16.3"
   }
